# posixmq

./: .cirrus.yml  .gitignore  Cargo.toml  LICENSE-MIT  README.md  posixmq.rs  tests.rs
examples/: default_capacities.rs  limits.rs  merge.rs  receive.rs  rm.rs  send.rs  sort.rs
tests/: basics.rs  cloexec.c  emfile.c  fd.rs  linux-x86_64-host-tests.sh  mq.c  names.rs  netbsd-setup.sh  nonblock.c  not_enoent.c  omnios-setup.sh  os_errors.rs  tests.rs  timed.rs
