[package]
name = "posixmq"
version = "0.2.0"
description = "An idiomatic posix message queue wrapper with optional mio integration"
readme = "README.md"
repository = "https://github.com/tormol/posixmq"
license = "Apache-2.0 / MIT"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
keywords = ["posix", "mq", "mqueue", "queue"]
categories = ["os::unix-apis", "asynchronous"]
exclude = ["/tests/**", "/examples/**"] # contains more than just tests and examples
edition = "2018"

[dependencies]
libc = "0.2.59"
# 0.2.59 added mq_timed{send,receive}() and FIONCLEX for Linux and all mq_ functions for solarish
mio = {version="0.7.0-alpha", features=["os-util"], optional=true}

[lib]
path = "posixmq.rs"

[target.'cfg(feature="mio")'.dev-dependencies]
mio = {version="0.7.0-alpha", features=["os-poll"]}

[package.metadata.docs.rs]
features = ["mio"]
